# UBS-Project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
apps/api/: config.py  logging_config.py  main.py
apps/api/auth/: ldap.py  models.py  routes.py
apps/api/chat/: models.py  routes.py  service.py
apps/api/database/: connection.py  models.py
apps/api/memory/: mem0_client.py
apps/api/workflow/: executor.py  graph.py  planner.py  state.py
apps/api/workflow/agents/: client_services.py  compliance_tax.py  fx_treasury.py  lending_credit.py  private_banking.py  wealth_advisory.py
apps/api/workflow/tools/: mcp_client.py  rag_tool.py
apps/ui/: openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
apps/ui/src/: App.tsx  index.css  main.tsx
apps/ui/src/api/: client.ts
apps/ui/src/components/: ChatWindow.module.css  ChatWindow.tsx  MessageBubble.module.css  MessageBubble.tsx  Sidebar.module.css  Sidebar.tsx  ThinkingIndicator.module.css  ThinkingIndicator.tsx
apps/ui/src/hooks/: useAuth.ts  useLlmMode.ts  useMessageStream.ts  useTheme.ts
apps/ui/src/pages/: ChatPage.module.css  ChatPage.tsx  LoginPage.module.css  LoginPage.tsx
apps/ui/src/types/: api.ts
mocks/: banking_ops_server.py  base.py  knowledge_server.py  service_workflow_server.py
rag/: config.py  ingest.py  server.py
scripts/: check_openapi_drift.py  export_openapi.py
